--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -26,6 +26,11 @@ playServicesMlkitTextRecognition = "19.0.1"
 cameraView = "1.3.4"
 firebaseFirestoreKtx = "25.1.0"
 media3CommonKtx = "1.4.1"
+navigationFragment = "2.8.3"
+navigationFragmentKtx = "2.8.3"
+navigationUiKtx = "2.8.3"
+recyclerview = "1.3.2"
+lifecycleViewmodelAndroid = "2.8.6"
 
 [libraries]
 androidx-camera-camera2 = { module = "androidx.camera:camera-camera2", version.ref = "cameraLifecycle" }
@@ -53,6 +58,11 @@ androidx-camera-view = { group = "androidx.camera", name = "camera-view", versio
 text-recognition = { module = "com.google.mlkit:text-recognition", version.ref = "textRecognition" }
 firebase-firestore-ktx = { group = "com.google.firebase", name = "firebase-firestore-ktx", version.ref = "firebaseFirestoreKtx" }
 androidx-media3-common-ktx = { group = "androidx.media3", name = "media3-common-ktx", version.ref = "media3CommonKtx" }
+androidx-navigation-fragment = { group = "androidx.navigation", name = "navigation-fragment", version.ref = "navigationFragment" }
+androidx-navigation-fragment-ktx = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "navigationFragmentKtx" }
+androidx-navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigationUiKtx" }
+androidx-recyclerview = { group = "androidx.recyclerview", name = "recyclerview", version.ref = "recyclerview" }
+androidx-lifecycle-viewmodel-android = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-android", version.ref = "lifecycleViewmodelAndroid" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
