--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
+
     <uses-feature android:name="android.hardware.camera.any" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
@@ -18,9 +19,11 @@
         android:theme="@style/Theme.KERAMAT_DJATI"
         tools:targetApi="31">
         <activity
+            android:name=".SplitBillActivity"
+            android:exported="false" />
+        <activity
             android:name=".transaction.TransactionActivityHost"
             android:exported="false" />
-
         <activity
             android:name=".CreateWalletActivity"
             android:exported="false" />
@@ -30,18 +33,19 @@
         <activity
             android:name=".Login"
             android:exported="true">
-             <intent-filter>
-             <action android:name="android.intent.action.MAIN" />
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-
-             <category android:name="android.intent.category.LAUNCHER" />
-             </intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true" >
+            android:exported="true">
+
             <!-- <intent-filter> -->
             <!-- <action android:name="android.intent.action.MAIN" /> -->
+
 
             <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
             <!-- </intent-filter> -->
