--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,11 +8,11 @@
     <uses-feature android:name="android.hardware.camera.any" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission
-        android:name="android.permission.READ_MEDIA_IMAGES"
-        android:targetSdkVersion="33" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="32" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="32"
+        tools:ignore="ScopedStorage" />
 
     <application
         android:allowBackup="true"
@@ -25,14 +25,20 @@
         android:theme="@style/Theme.KERAMAT_DJATI"
         tools:targetApi="31">
         <activity
-            android:name=".savebill.SaveBillActivity"
+            android:name=".ReceiptDetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AddReceiptActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SaveReceiptActivity"
             android:exported="false" />
         <activity
             android:name=".splitbill.SplitBillDisplayActivity"
             android:exported="false" />
         <activity
             android:name=".splitbill.SplitBillActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".addCategory"
             android:exported="false" />
