--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,9 +8,11 @@
     <uses-feature android:name="android.hardware.camera.any" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
+    <uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
         android:maxSdkVersion="32" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         android:maxSdkVersion="32"
         tools:ignore="ScopedStorage" />
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
@@ -25,6 +27,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.KERAMAT_DJATI"
         tools:targetApi="31">
+        <activity
+            android:name=".AddMenu"
+            android:exported="false"
+            android:theme="@style/Theme.KERAMAT_DJATI" />
         <activity
             android:name=".ReceiptDetailActivity"
             android:exported="false" />
